<resources>
    <string name="app_name">Maya\'s_Cafe_Admin</string>
    <string name="get_start">Get Start</string>
    <string name="no_title"> </string>
    <string name="GetStart_Title">Maya\'s</string>
    <string name="GetStart_SubTitle">Garden &amp; Juice Bar</string>
    <string name="GetStart_Heading">Cooking our dishes with love for you</string>
    <string name="Login_EditTxt">Enter mobile number</string>
    <string-array name="Food_txt">
        <item>Breakfast</item>
        <item>Porridge</item>
        <item>Seafood</item>
        <item>Healthy</item>
        <item>Sides</item>
        <item>Appetizers</item>
        <item>Lunch &amp; Dinner</item>
        <item>Pasta</item>
        <item>Soup</item>
    </string-array>
    <string-array name="Food_name">
        <item>Pepper Shrimp</item>
        <item>Jerk Jackfruit</item>
        <item>Calamari</item>
    </string-array>
    <string-array name="Food_option">
        <item>(Head On or Head Off)</item>
        <item>(With rice and peas)</item>
        <item>(Cut into rings)</item>
    </string-array>
    <string-array name="Food_price">
        <item>₹ 250</item>
        <item>₹ 250</item>
        <item>₹ 150</item>
    </string-array>
    <string-array name="Name_Food">
        <item>Green Salad</item>
        <item>Egg and Salad</item>
        <item>Vegetable Soup</item>
    </string-array>
    <string-array name="Food_op">
        <item>(Veggies of your choice)</item>
        <item>(Fresh Eggs)</item>
        <item>(Hot and Sour)</item>
    </string-array>
    <string-array name="Food_rate">
        <item>₹ 50</item>
        <item>₹ 50</item>
        <item>₹ 70</item>
    </string-array>
    <string name="orders">Current Orders</string>
    <string name="ordersHistory">Orders History</string>
    <string name="profile">My Profile</string>
    <string name="payment">Payment History</string>
    <string name="menu">Menu</string>
    <string name="offers">Offers List</string>
    <string name="notify">Notifications</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ready_to_deliver">Ready to Deliver</string>
    <string name="being_prepared">Being\nPrepared</string>
    <string name="new_orders">New \nOrders</string>
    <string name="all_orders">All \nOrders</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
</resources>