<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" android:id="@+id/g1">
        <item
            android:id="@+id/AllOrders"
            android:title="@string/orders"
            android:icon="@drawable/icon_awesome_clipboard_list"/>
        <item
            android:id="@+id/PayHistory"
            android:title="@string/payment"
            android:icon="@drawable/icon_open_credit_card"/>
        <item
            android:id="@+id/Menu"
            android:title="@string/menu"
            android:icon="@drawable/icon_material_restaurant_menu"/>
        <item
            android:id="@+id/Offers"
            android:title="@string/offers"
            android:icon="@drawable/icon_material_local_offer"/>
        <item
            android:id="@+id/logoutNav"
            android:title="@string/logout"
            android:icon="@drawable/icon_open_account_logout"/>
    </group>
</menu>