<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/drawer"
    android:background="#F5F9FE"
    android:layout_height="match_parent"
    tools:context=".fragments.Dashboard_frag">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="60dp">

                    <TextView
                        android:id="@+id/hello"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="Hello"
                        android:textColor="#676767"
                        android:textSize="24dp"
                        android:textStyle="normal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="@dimen/space_8dp"
                        android:text="Ramu Kaka"
                        android:textColor="@color/black"
                        android:textSize="24dp"
                        app:layout_constraintStart_toEndOf="@+id/hello"
                        app:layout_constraintTop_toTopOf="parent" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/user_img"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/mask_group_1"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/income_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        app:cardCornerRadius="10dp"
                        android:backgroundTint="#FCF7F7"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/user_img">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/target_amt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:layout_marginEnd="24dp"
                                android:text="$1200.00"
                                android:fontFamily="@font/montserrat_medium"
                                android:textColor="@color/black"
                                android:textSize="24dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/target"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="16dp"
                                android:layout_marginTop="16dp"
                                android:fontFamily="@font/montserrat_medium"
                                android:text="Total Income"
                                android:textColor="@color/black"
                                android:textSize="18dp"
                                app:layout_constraintEnd_toStartOf="@+id/target_amt"
                                app:layout_constraintTop_toTopOf="parent" />

                            <com.github.mikephil.charting.charts.BarChart
                                android:id="@+id/bar_chart"
                                android:layout_width="match_parent"
                                android:layout_height="200dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="8dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/target" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/allorders_card"
                        android:layout_width="180dp"
                        android:layout_height="100dp"
                        android:layout_margin="16dp"
                        android:backgroundTint="#F9DAE0"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintEnd_toStartOf="@+id/neworders_card"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/income_card">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="20dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="512"
                            android:textColor="@color/black"
                            android:textSize="30dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="22dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/all_orders"
                            android:textAlignment="center"
                            android:textColor="#363853"
                            android:textSize="16dp" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/neworders_card"
                        android:layout_width="180dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="10dp"
                        app:cardCornerRadius="10dp"
                        android:backgroundTint="#FFEDD2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/income_card" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="210"
                            android:textSize="30dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            android:layout_marginBottom="20dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/new_orders"
                            android:textColor="#363853"
                            android:textAlignment="center"
                            android:fontFamily="@font/montserrat_medium"
                            android:textSize="16dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="22dp" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/preporders_card"
                        android:layout_width="180dp"
                        android:layout_height="100dp"
                        android:layout_margin="16dp"
                        android:backgroundTint="#D5D9FB"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintEnd_toStartOf="@+id/deliverorders_card"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/allorders_card">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="20dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="150"
                            android:textColor="@color/black"
                            android:textSize="30dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="22dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/being_prepared"
                            android:textAlignment="center"
                            android:textColor="#363853"
                            android:textSize="16dp" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/deliverorders_card"
                        android:layout_width="180dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="10dp"
                        app:cardCornerRadius="10dp"
                        android:backgroundTint="#DDECBF"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/neworders_card">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="100"
                            android:textSize="30dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            android:layout_marginBottom="20dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ready_to_deliver"
                            android:textColor="#363853"
                            android:textSize="16dp"
                            android:textAlignment="center"
                            android:fontFamily="@font/montserrat_medium"
                            android:layout_gravity="center"
                            android:layout_marginTop="22dp" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/recentOrders_card"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_margin="16dp"
                        app:cardCornerRadius="10dp"
                        android:backgroundTint="#FFFFFF"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/deliverorders_card" >

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/recent_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Recent Orders"
                                android:textSize="18dp"
                                android:fontFamily="@font/montserrat_medium"
                                android:textColor="@color/black"
                                android:layout_gravity="start"
                                android:layout_marginTop="16dp"
                                android:layout_marginStart="16dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"/>

                            <androidx.recyclerview.widget.RecyclerView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/recent_txt"
                                android:layout_margin="16dp" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.drawerlayout.widget.DrawerLayout>